objects/EinsteinDataSource__c.object
<CustomObject>
    <fields>
        <fullName>EinsteinChatSuggestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Einstein Chat Suggestion</label>
        <referenceTo>ChatSuggestion__c</referenceTo>
        <relationshipLabel>Einstein Data Sources</relationshipLabel>
        <relationshipName>EinsteinDataSources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EinsteinResponseCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Einstein Response Card</label>
        <referenceTo>EinsteinResponseCard__c</referenceTo>
        <relationshipLabel>Einstein Data Sources</relationshipLabel>
        <relationshipName>EinsteinDataSources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Einstein Data Source</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Einstein Data Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>